--- a/src/GUIS/DCategorias.ui
+++ b/src/GUIS/DCategorias.ui
@@ -637,7 +637,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>490</y>
+      <y>480</y>
       <width>71</width>
       <height>37</height>
      </rect>
@@ -702,7 +702,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="LENombre">
     <property name="geometry">
      <rect>
       <x>450</x>
@@ -741,7 +741,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QSpinBox" name="SBId2_2">
+   <widget class="QSpinBox" name="SBNuevoId">
     <property name="geometry">
      <rect>
       <x>890</x>
