--- a/src/GUIS/DRestaurantes.ui
+++ b/src/GUIS/DRestaurantes.ui
@@ -453,7 +453,7 @@
         <set>Qt::AlignCenter</set>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>999999999</number>
        </property>
       </widget>
      </item>
@@ -699,7 +699,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LNombreAgregar">
@@ -783,7 +783,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLineEdit" name="LESlogan">
@@ -1047,7 +1047,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="SBNewCategoria">
@@ -1068,7 +1068,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
   </widget>
@@ -1078,7 +1078,7 @@
      <x>0</x>
      <y>0</y>
      <width>1097</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
