--- a/src/GUIS/DCategorias.ui
+++ b/src/GUIS/DCategorias.ui
@@ -453,7 +453,7 @@
         <set>Qt::AlignCenter</set>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>999999999</number>
        </property>
       </widget>
      </item>
@@ -675,7 +675,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LNombreAgregar">
@@ -759,7 +759,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
   </widget>
