--- a/src/GUIS/DPedidos.ui
+++ b/src/GUIS/DPedidos.ui
@@ -442,6 +442,45 @@
      <property name="leftMargin">
       <number>0</number>
      </property>
+     <item row="4" column="2">
+      <widget class="QPushButton" name="PBTodas">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Ver Todos</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="2">
+      <widget class="QPushButton" name="PBSalir">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Salir Pedidos</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+     </item>
+     <item row="4" column="1">
+      <widget class="QPushButton" name="PBBuscar">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Buscar</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0" colspan="3">
       <widget class="QLabel" name="LTitulo">
        <property name="minimumSize">
@@ -465,58 +504,31 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <layout class="QHBoxLayout" name="horizontalLayout_2"/>
-     </item>
-     <item row="2" column="2">
-      <widget class="QPushButton" name="PBTodas">
+     <item row="9" column="1">
+      <widget class="QPushButton" name="PBModificar">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Ver Todos</string>
+        <string>Modificar</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="2">
-      <widget class="QPushButton" name="PBSalir">
+     <item row="9" column="0">
+      <widget class="QPushButton" name="PBAgregar">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Salir Pedidos</string>
+        <string>Agregar</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="PBBuscar">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Buscar</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="PBEliminar">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Eliminar</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0" colspan="3">
+     <item row="8" column="0" colspan="3">
       <widget class="QTableWidget" name="TWTabla">
        <property name="minimumSize">
         <size>
@@ -570,27 +582,48 @@
        </column>
       </widget>
      </item>
-     <item row="7" column="0">
-      <widget class="QPushButton" name="PBAgregar">
+     <item row="4" column="0">
+      <widget class="QPushButton" name="PBEliminar">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Agregar</string>
+        <string>Eliminar</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QPushButton" name="PBModificar">
+     <item row="3" column="0">
+      <widget class="QLabel" name="LId">
+       <property name="font">
+        <font>
+         <family>Yu Gothic UI Semibold</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>ID</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <widget class="QSpinBox" name="SBId">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
-       <property name="text">
-        <string>Modificar</string>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="maximum">
+        <number>999999999</number>
        </property>
       </widget>
      </item>
@@ -638,7 +671,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LNombreAgregar">
@@ -707,7 +740,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QDateTimeEdit" name="dateTimeEdit">
@@ -765,7 +798,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LIdAgregar_3">
@@ -810,7 +843,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QDateTimeEdit" name="newDateTimeEdit">
@@ -857,7 +890,7 @@
      <x>0</x>
      <y>0</y>
      <width>1097</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
