--- a/src/GUIS/DPlatos.ui
+++ b/src/GUIS/DPlatos.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1227</width>
-    <height>689</height>
+    <width>1412</width>
+    <height>764</height>
    </rect>
   </property>
   <property name="palette">
@@ -432,9 +432,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>40</x>
       <y>10</y>
-      <width>971</width>
+      <width>1341</width>
       <height>441</height>
      </rect>
     </property>
@@ -665,7 +665,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>460</y>
+      <y>480</y>
       <width>100</width>
       <height>37</height>
      </rect>
@@ -688,8 +688,8 @@
    <widget class="QLabel" name="LNombreAgregar">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>460</y>
+      <x>320</x>
+      <y>480</y>
       <width>121</width>
       <height>37</height>
      </rect>
@@ -712,8 +712,8 @@
    <widget class="QSpinBox" name="SBIdPlato">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>460</y>
+      <x>170</x>
+      <y>480</y>
       <width>150</width>
       <height>34</height>
      </rect>
@@ -727,15 +727,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LIdAgregar_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>510</y>
-      <width>100</width>
+      <y>530</y>
+      <width>81</width>
       <height>37</height>
      </rect>
     </property>
@@ -757,8 +757,8 @@
    <widget class="QSpinBox" name="SBPrecio">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>510</y>
+      <x>170</x>
+      <y>530</y>
       <width>150</width>
       <height>34</height>
      </rect>
@@ -772,15 +772,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LIdAgregar_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>550</y>
-      <width>120</width>
+      <x>0</x>
+      <y>570</y>
+      <width>161</width>
       <height>37</height>
      </rect>
     </property>
@@ -802,9 +802,9 @@
    <widget class="QSpinBox" name="SBRestaurante">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>550</y>
-      <width>111</width>
+      <x>170</x>
+      <y>580</y>
+      <width>151</width>
       <height>34</height>
      </rect>
     </property>
@@ -817,14 +817,14 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLineEdit" name="LENombre">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>460</y>
+      <x>470</x>
+      <y>480</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -838,9 +838,9 @@
    <widget class="QSpinBox" name="SBnewIdPlato">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>460</y>
-      <width>150</width>
+      <x>889</x>
+      <y>480</y>
+      <width>151</width>
       <height>34</height>
      </rect>
     </property>
@@ -853,15 +853,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LNuevoId_3">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>460</y>
-      <width>151</width>
+      <x>640</x>
+      <y>470</y>
+      <width>191</width>
       <height>37</height>
      </rect>
     </property>
@@ -883,9 +883,9 @@
    <widget class="QLabel" name="LNombreAgregar_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>510</y>
-      <width>121</width>
+      <x>330</x>
+      <y>530</y>
+      <width>71</width>
       <height>37</height>
      </rect>
     </property>
@@ -907,9 +907,9 @@
    <widget class="QLabel" name="LNombreAgregar_3">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>550</y>
-      <width>121</width>
+      <x>330</x>
+      <y>570</y>
+      <width>101</width>
       <height>37</height>
      </rect>
     </property>
@@ -931,9 +931,9 @@
    <widget class="QLabel" name="LNombreAgregar_4">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>590</y>
-      <width>110</width>
+      <x>0</x>
+      <y>620</y>
+      <width>151</width>
       <height>37</height>
      </rect>
     </property>
@@ -955,9 +955,9 @@
    <widget class="QTextEdit" name="TEDescripcion">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>590</y>
-      <width>405</width>
+      <x>170</x>
+      <y>630</y>
+      <width>451</width>
       <height>71</height>
      </rect>
     </property>
@@ -965,11 +965,16 @@
    <widget class="QComboBox" name="CBMani">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>510</y>
-      <width>69</width>
+      <x>470</x>
+      <y>530</y>
+      <width>151</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <item>
      <property name="text">
@@ -985,11 +990,16 @@
    <widget class="QComboBox" name="CBPicante">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>550</y>
-      <width>69</width>
+      <x>470</x>
+      <y>570</y>
+      <width>151</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <item>
      <property name="text">
@@ -1005,9 +1015,9 @@
    <widget class="QLabel" name="LNuevoId_4">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>510</y>
-      <width>151</width>
+      <x>640</x>
+      <y>520</y>
+      <width>171</width>
       <height>37</height>
      </rect>
     </property>
@@ -1029,9 +1039,9 @@
    <widget class="QLabel" name="LNuevoId_5">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>550</y>
-      <width>191</width>
+      <x>640</x>
+      <y>570</y>
+      <width>241</width>
       <height>37</height>
      </rect>
     </property>
@@ -1053,9 +1063,9 @@
    <widget class="QLabel" name="LNombreAgregar_5">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>580</y>
-      <width>181</width>
+      <x>640</x>
+      <y>620</y>
+      <width>231</width>
       <height>37</height>
      </rect>
     </property>
@@ -1077,9 +1087,9 @@
    <widget class="QLabel" name="LNombreAgregar_6">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>460</y>
-      <width>161</width>
+      <x>1050</x>
+      <y>480</y>
+      <width>191</width>
       <height>37</height>
      </rect>
     </property>
@@ -1101,9 +1111,9 @@
    <widget class="QLabel" name="LNombreAgregar_7">
     <property name="geometry">
      <rect>
-      <x>890</x>
-      <y>500</y>
-      <width>131</width>
+      <x>1050</x>
+      <y>520</y>
+      <width>161</width>
       <height>37</height>
      </rect>
     </property>
@@ -1125,9 +1135,9 @@
    <widget class="QLabel" name="LNombreAgregar_8">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>540</y>
-      <width>141</width>
+      <x>1050</x>
+      <y>560</y>
+      <width>181</width>
       <height>37</height>
      </rect>
     </property>
@@ -1149,9 +1159,9 @@
    <widget class="QTextEdit" name="TEnewDescripcion">
     <property name="geometry">
      <rect>
-      <x>760</x>
-      <y>590</y>
-      <width>405</width>
+      <x>890</x>
+      <y>630</y>
+      <width>511</width>
       <height>71</height>
      </rect>
     </property>
@@ -1159,11 +1169,16 @@
    <widget class="QComboBox" name="CBnewPicante">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>550</y>
-      <width>69</width>
+      <x>1250</x>
+      <y>570</y>
+      <width>151</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <item>
      <property name="text">
@@ -1179,11 +1194,16 @@
    <widget class="QComboBox" name="CBnewMani">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>510</y>
-      <width>69</width>
+      <x>1250</x>
+      <y>530</y>
+      <width>151</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <item>
      <property name="text">
@@ -1199,8 +1219,8 @@
    <widget class="QSpinBox" name="SBnewPrecio">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>510</y>
+      <x>890</x>
+      <y>530</y>
       <width>150</width>
       <height>34</height>
      </rect>
@@ -1214,15 +1234,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="SBnewRestaurante">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>550</y>
-      <width>111</width>
+      <x>890</x>
+      <y>570</y>
+      <width>151</width>
       <height>34</height>
      </rect>
     </property>
@@ -1235,14 +1255,14 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>1000000000</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLineEdit" name="LEnewNombre">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>460</y>
+      <x>1250</x>
+      <y>480</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -1259,8 +1279,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1227</width>
-     <height>21</height>
+     <width>1412</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
