--- a/src/GUIS/DRestaurantes.ui
+++ b/src/GUIS/DRestaurantes.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1097</width>
+    <width>1094</width>
     <height>710</height>
    </rect>
   </property>
@@ -432,9 +432,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>30</x>
       <y>10</y>
-      <width>971</width>
+      <width>1041</width>
       <height>441</height>
      </rect>
     </property>
@@ -453,7 +453,7 @@
         <set>Qt::AlignCenter</set>
        </property>
        <property name="maximum">
-        <number>999999</number>
+        <number>999999999</number>
        </property>
       </widget>
      </item>
@@ -624,8 +624,8 @@
    <widget class="QPushButton" name="PBModificar">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>580</y>
+      <x>10</x>
+      <y>570</y>
       <width>231</width>
       <height>37</height>
      </rect>
@@ -642,8 +642,8 @@
    <widget class="QPushButton" name="PBAgregar">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>540</y>
+      <x>10</x>
+      <y>520</y>
       <width>231</width>
       <height>37</height>
      </rect>
@@ -660,9 +660,9 @@
    <widget class="QLabel" name="LIdAgregar">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>260</x>
       <y>460</y>
-      <width>71</width>
+      <width>31</width>
       <height>37</height>
      </rect>
     </property>
@@ -684,9 +684,9 @@
    <widget class="QSpinBox" name="SBId2">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>400</x>
       <y>460</y>
-      <width>161</width>
+      <width>201</width>
       <height>34</height>
      </rect>
     </property>
@@ -699,15 +699,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLabel" name="LNombreAgregar">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>260</x>
       <y>500</y>
-      <width>121</width>
+      <width>101</width>
       <height>37</height>
      </rect>
     </property>
@@ -729,9 +729,9 @@
    <widget class="QLineEdit" name="LENombre">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>400</x>
       <y>500</y>
-      <width>175</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -744,7 +744,7 @@
    <widget class="QLabel" name="LNuevoId">
     <property name="geometry">
      <rect>
-      <x>665</x>
+      <x>630</x>
       <y>460</y>
       <width>121</width>
       <height>37</height>
@@ -768,9 +768,9 @@
    <widget class="QSpinBox" name="SBNuevoId">
     <property name="geometry">
      <rect>
-      <x>815</x>
+      <x>850</x>
       <y>460</y>
-      <width>161</width>
+      <width>211</width>
       <height>34</height>
      </rect>
     </property>
@@ -783,15 +783,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QLineEdit" name="LESlogan">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>400</x>
       <y>580</y>
-      <width>175</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -804,7 +804,7 @@
    <widget class="QLabel" name="LNombreAgregar_2">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>260</x>
       <y>540</y>
       <width>121</width>
       <height>37</height>
@@ -828,9 +828,9 @@
    <widget class="QLabel" name="LNombreAgregar_3">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>260</x>
       <y>580</y>
-      <width>121</width>
+      <width>81</width>
       <height>37</height>
      </rect>
     </property>
@@ -852,9 +852,9 @@
    <widget class="QLabel" name="LNuevoId_2">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>630</x>
       <y>500</y>
-      <width>150</width>
+      <width>191</width>
       <height>37</height>
      </rect>
     </property>
@@ -876,9 +876,9 @@
    <widget class="QLineEdit" name="LENewNombre">
     <property name="geometry">
      <rect>
-      <x>815</x>
+      <x>850</x>
       <y>500</y>
-      <width>175</width>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
@@ -891,9 +891,9 @@
    <widget class="QLabel" name="LNuevoId_3">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>630</x>
       <y>540</y>
-      <width>161</width>
+      <width>201</width>
       <height>37</height>
      </rect>
     </property>
@@ -915,9 +915,9 @@
    <widget class="QLineEdit" name="LENewSlogan">
     <property name="geometry">
      <rect>
-      <x>815</x>
+      <x>854</x>
       <y>580</y>
-      <width>175</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -930,9 +930,9 @@
    <widget class="QLabel" name="LNuevoId_4">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>629</x>
       <y>580</y>
-      <width>150</width>
+      <width>171</width>
       <height>37</height>
      </rect>
     </property>
@@ -954,7 +954,7 @@
    <widget class="QLabel" name="LNombreAgregar_4">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>250</x>
       <y>620</y>
       <width>121</width>
       <height>37</height>
@@ -978,9 +978,9 @@
    <widget class="QLineEdit" name="LEDireccion">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>400</x>
       <y>620</y>
-      <width>175</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -993,9 +993,9 @@
    <widget class="QLabel" name="LNuevoId_5">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>630</x>
       <y>620</y>
-      <width>161</width>
+      <width>201</width>
       <height>37</height>
      </rect>
     </property>
@@ -1017,9 +1017,9 @@
    <widget class="QLineEdit" name="LENewDireccion">
     <property name="geometry">
      <rect>
-      <x>815</x>
+      <x>854</x>
       <y>620</y>
-      <width>175</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -1032,9 +1032,9 @@
    <widget class="QSpinBox" name="SBCategoria">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>400</x>
       <y>540</y>
-      <width>161</width>
+      <width>201</width>
       <height>34</height>
      </rect>
     </property>
@@ -1047,15 +1047,15 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="SBNewCategoria">
     <property name="geometry">
      <rect>
-      <x>815</x>
+      <x>850</x>
       <y>540</y>
-      <width>161</width>
+      <width>211</width>
       <height>34</height>
      </rect>
     </property>
@@ -1068,7 +1068,7 @@
      <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
-     <number>999999</number>
+     <number>999999999</number>
     </property>
    </widget>
   </widget>
@@ -1077,8 +1077,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1097</width>
-     <height>21</height>
+     <width>1094</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
